tests/baselines/reference/expressionsForbiddenInParameterInitializers(strict=true).errors.txt
bar.ts(1,35): error TS2524: 'await' expressions cannot be used in a parameter initializer.
bar.ts(4,31): error TS2523: 'yield' expressions cannot be used in a parameter initializer.
bar.ts(4,31): error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.


==== bar.ts (3 errors) ====
    export async function foo({ foo = await import("./bar") }) {
                                      ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2524: 'await' expressions cannot be used in a parameter initializer.
    }
    
    export function* foo2({ foo = yield "a" }) {
                                  ~~~~~
!!! error TS2523: 'yield' expressions cannot be used in a parameter initializer.
                                  ~~~~~
!!! error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.
    }
    